--- a/m-app/public/index.html
+++ b/m-app/public/index.html
@@ -28,7 +28,12 @@
       To begin the development, run `npm start`.
       To create a production bundle, use `npm run build`.
     -->
-    <script src="plugin.js"></script>
+    <!--<script src="plugin.js"></script>-->
     <script src="bundle.js"></script>
+    <script>
+      // pluginOne.default.config({foo: "bar", selector: "#p1"});
+      // var p1 = pluginOne.default.plugins.plugin1.new({selector: "#p1"});
+      // p1.render({hello: "world"});      
+    </script>
   </body>
 </html>
