--- a/m-app/public/index.html
+++ b/m-app/public/index.html
@@ -28,8 +28,11 @@
       To begin the development, run `npm start`.
       To create a production bundle, use `npm run build`.
     -->
-    <!--<script src="plugin.js"></script>-->
     <script src="bundle.js"></script>
+    <script src="plugin.js"></script>
+    <script>
+      __plugins = {name: "foobar", obj: pluginOne.Plugin};
+    </script>
     <script>
       // pluginOne.default.config({foo: "bar", selector: "#p1"});
       // var p1 = pluginOne.default.plugins.plugin1.new({selector: "#p1"});
