--- a/m-app/public/index.html
+++ b/m-app/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <!--<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">-->
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -18,21 +18,24 @@
   <body>
     <div id="root"></div>
     <div id="p1"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+    <script src="jspm_packages/system.js"></script>
+    <script src="config.js"></script>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+    <!--<script src="dist.js"></script>-->
 
-      To begin the development, run `npm start`.
-      To create a production bundle, use `npm run build`.
-    -->
-    <script src="bundle.js"></script>
+    <script>
+        SystemJS.import("./entry");
+        // SystemJS.import("./plugin-one")
+        //   .then(() => {
+        //     return SystemJS.import("./entry");
+        //   })
+    </script>
+
+    <!--<script src="bundle.js"></script>
     <script src="plugin.js"></script>
     <script>
       __plugins = {name: "foobar", obj: pluginOne.Plugin};
-    </script>
+    </script>-->
     <script>
       // pluginOne.default.config({foo: "bar", selector: "#p1"});
       // var p1 = pluginOne.default.plugins.plugin1.new({selector: "#p1"});
